--- a/index.html
+++ b/index.html
@@ -28,6 +28,17 @@
   <br>
   <br>
 
+  <form action="/action_page.php">
+    <select name="cars">
+      <option value="volvo">Volvo</option>
+      <option value="saab">Saab</option>
+      <option value="fiat">Fiat</option>
+      <option value="audi">Audi</option>
+    </select>
+    <br><br>
+    <input type="submit">
+  </form>
+
   
   <div class="footer">
     <div color="white">Created by Spring & Xander &nbsp; &nbsp;&nbsp;
