dummy select button and search bar

--- a/index.html
+++ b/index.html
@@ -27,7 +27,15 @@
   <h1>Welcome to CreativeProject2</h1>
   <br>
   <br>
-
+  <form>
+    <input id="moneyInput" type="number" placeholder="0.00" style="opacity: 0.5;"></input>
+    <select id="currencyType">
+      <option value="volvo">Volvo</option>
+      <option value="saab">Saab</option>
+      <option value="mercedes">Mercedes</option>
+      <option value="audi">Audi</option>
+    </select>
+  </form>
   
   <div class="footer">
     <div color="white">Created by Spring & Xander &nbsp; &nbsp;&nbsp;
