--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
 <head>
   <meta charset="utf-8" />
   <title>Currency Exchange</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="./styles.css">
+    <script text="type/javascript" src="script.js"></script>
+
 </head>
 
-<body>
+<body onLoad="init()">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar-custom">
     <a class="navbar-brand" href="index.html">
-      <img src="./images/cloudy2.png" width="35" height="35" alt=""/>
       &nbsp;&nbsp;&nbsp;Currency Exchange
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -28,13 +30,11 @@
   <br>
   <br>
   <form>
-    <input id="moneyInput" type="number" placeholder="0.00" style="opacity: 0.5;"></input>
+    <input id="moneyInput" type="float" placeholder="0.00" style="opacity: 0.5;"></input>
     <select id="currencyType">
-      <option value="volvo">Volvo</option>
-      <option value="saab">Saab</option>
-      <option value="mercedes">Mercedes</option>
-      <option value="audi">Audi</option>
+      
     </select>
+    <button id="moneySubmit" type="submit"><i class="fa fa-search"></i></button>
   </form>
   
   <div class="footer">
@@ -45,8 +45,6 @@
 
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js" integrity="sha256-4iQZ6BVL4qNKlQ27TExEhBN1HFPvAvAMbFavKKosSWQ=" crossorigin="anonymous"></script>
-  <script text="type/javascript" src="./script.js"></script>
-
 </body>
 
 </html>
