still problems with function

--- a/index.html
+++ b/index.html
@@ -34,9 +34,7 @@
       <p>Then select the currency you'd like to exchange it into.</p>
       <br>
       <input id="moneyInput" type="float" placeholder="0.00" style="opacity: 0.5;"></input>
-      <select id="currencyType">
-        
-      </select>
+      <select id="currencyType"></select>
       <button id="moneySubmit" type="submit"><i class="fa fa-search"></i></button>
     </form>
   </div>
