--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <br>
       <input id="moneyInput" type="float" placeholder="0.00" style="opacity: 0.5;"></input>
       <select id="currencyType"></select>
-      <button id="moneySubmit" type="submit"><i class="fa fa-search"></i></button>
+      <button id="moneySubmit" type="button" onclick="submitCurrency()"><i class="fa fa-search"></i></button>
     </form>
   </div>
   
