--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
   <br>
   
   <h2>Result:</h2>
-  <div class="centered" id="currencyResult"></div>
+  <div class="centered" >
+    <h2 id="currencyResult"></h2>
+  </div>
   
   <div class="footer">
     <div color="white">Created by Spring & Xander &nbsp; &nbsp;&nbsp;
