color change and icon

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
   </nav>
   
-  <h1>Welcome to CreativeProject2</h1>
+  <h1>Welcome to Currency Exchange</h1>
   
   <br>
   <br>
@@ -35,7 +35,7 @@
       <br>
       <input id="moneyInput" type="float" placeholder="0.00" style="opacity: 0.5;"></input>
       <select id="currencyType"></select>
-      <button id="moneySubmit" type="button" onclick="submitCurrency()"><i class="fa fa-search"></i></button>
+      <button id="moneySubmit" type="button" onclick="submitCurrency()"><i class="fa fa-money"></i></button>
     </form>
   </div>
   
