result box added

--- a/index.html
+++ b/index.html
@@ -46,8 +46,10 @@
   <br>
   
   <h2>Result:</h2>
-  <div class="centered" >
-    <h2 id="currencyResult"></h2>
+  <div class="container">
+    <div class="centered" >
+      <h2 id="currencyResult"></h2>
+    </div>
   </div>
   
   <div class="footer">
