--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
       <p>Then select the currency you'd like to exchange it into.</p>
       <br>
       <input id="moneyInput" type="float" placeholder="0.00" style="opacity: 0.5;"></input>
-      <select id="currencyType"></select>
+      <select id="currencyTypeFrom"></select>
+      <select id="currencyTypeTo"></select>
       <button id="moneySubmit" type="button" onclick="submitCurrency()"><i class="fa fa-money"></i></button>
     </form>
   </div>
