button label change

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 <body onLoad="init()">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar-custom">
     <a class="navbar-brand" href="index.html">
+      <i class="fa fa-money"></i>
+      <i class="fa fa-money"></i>
+      <i class="fa fa-money"></i>
       &nbsp;&nbsp;&nbsp;Currency Exchange
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,7 +41,7 @@
       <br>
       <input id="moneyInput" type="float" placeholder="0.00" style="opacity: 0.5;"></input>
       <select id="currencyType"></select>
-      <button id="moneySubmit" type="button" onclick="submitCurrency()"><i class="fa fa-money"></i></button>
+      <button id="moneySubmit" type="button" onclick="submitCurrency()">Get money!</button>
     </form>
   </div>
   
