--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <br>
       <input id="moneyInput" type="float" placeholder="0.00" style="opacity: 0.5;"></input>
       <select id="currencyType"></select>
-      <button id="moneySubmit" type="button" onclick="submitCurrency()">Get money!</button>
+      <button id="moneySubmit" type="button" onclick="submitCurrency()">Go!</button>
     </form>
   </div>
   
