--- a/index.html
+++ b/index.html
@@ -34,22 +34,30 @@
   <br>
   <br>
   
-  <div class="centered">
-    <form>
-      <p>Enter amount of money to exchange (USD)</p>
-      <p>Then select the currency you'd like to exchange it into.</p>
-      <br>
-      <input id="moneyInput" type="float" placeholder="0.00" style="opacity: 0.5;"></input>
-<<<<<<< HEAD
-      <select id="currencyType"></select>
-      <button id="moneySubmit" type="button" onclick="submitCurrency()">Go!</button>
-=======
-      <select id="currencyTypeFrom"></select>
-      <select id="currencyTypeTo"></select>
-      <button id="moneySubmit" type="button" onclick="submitCurrency()"><i class="fa fa-money"></i></button>
-
->>>>>>> 9d732e9fe0f39e5a38783172642b3ea07b4a0a81
-    </form>
+  
+  <div class="row">
+  
+    <div class="blue-container">
+      <div class="centered" >
+        <form>
+          <p>Enter amount of money to exchange</p>
+          <br>
+          <input id="moneyInput" type="float" placeholder="0.00" style="opacity: 0.5;"></input>
+          <select id="currencyTypeFrom"></select>
+      </form>
+      </div>
+    </div>
+  
+    <div class="blue-container">
+      <div class="centered" >
+        <form>
+          <p>Select the currency you'd like to exchange it into.</p>
+          <br>
+          <select id="currencyTypeTo"></select>
+        <button id="moneySubmit" type="button" onclick="submitCurrency()">Go!</i></button>
+      </form>
+      </div>
+    </div>
   </div>
   
   <br>
